--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,9 @@ documentation = "https://bancointer.readthedocs.io/"
 repository = "https://github.com/lucasrcezimbra/bancointer"
 changelog = "https://github.com/lucasrcezimbra/bancointer/blob/main/CHANGELOG.md"
 
-dependencies = []
+dependencies = [
+  "requests==2.28.1",
+]
 
 [project.optional-dependencies]
 build = [
@@ -40,9 +42,7 @@ docs = [
   "sphinx-rtd-theme==1.0.0",
 ]
 test = [
-
   "bump2version==1.0.1",
-
   "coverage==6.4.4",
   "coveralls==3.3.1",
   "faker==14.2.1",
@@ -51,6 +51,7 @@ test = [
   "pytest==7.1.3",
   "pytest-cov==3.0.0",
   "pytest-mock==3.8.2",
+  "responses==0.22.0",
   "tox==3.26.0",
 ]
 
