--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Run pre-commit
       run: pre-commit run -a
     - name: Test with pytest
-      run: pytest --cov=bancointer
+      run: pytest --cov=inter
     - name: Upload coverage data to coveralls.io
       run: coveralls --service=github
       env:
