--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,4 +1,3 @@
-
 [project]
 name="bancointer"
 version = "0.0.3"
@@ -22,6 +21,7 @@ classifiers = [
   'Programming Language :: Python :: 3.10',
 ]
 dependencies = [
+  "attrs==22.1.0",
   "requests==2.28.1",
 ]
 
