--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,7 @@ exclude = ["contrib", "docs", "pytest.ini", "tox.ini", "test*"]
 
 [tool.pytest.ini_options]
 python_files = ["tests.py", "test_*.py", "*_tests.py"]
+addopts = "--doctest-modules"
 
 [tool.tox]
 legacy_tox_ini = """
